# symbolic_pofk

./: .gitignore  LICENSE  README.md  output.txt  setup.cfg  setup.py  setup_fortran.sh
.github/workflows/: build-linux.yml  build-mac.yml  coverage.yml
examples/: ehu.py  examples.py  fortran_example.py  halofit_example.py  linear_example.py  siren_plus_example.ipynb  syren_baryon_example.ipynb  syren_new_example.ipynb  syren_plus_example.ipynb
fortran/: syrenhalofit.f90
pytorch/: linear.py  syren_baryon.py
symbolic_pofk/: emulators.py  linear.py  linear_new.py  linear_plus.py  syren_baryon.py  syren_new.py  syren_plus.py  syrenhalofit.py
symbolic_pofk/fortran/: syrenhalofit.f90
symbolic_pofk/pytorch/: linear.py  linear_new.py  linear_plus.py  syren_baryon.py  syren_new.py  syren_plus.py  syrenhalofit.py  utils.py
tests/: run.py  test_syren.py
