[metadata]
name = symbolic_pofk
version = 0.1.0
description = A short python module to compute symnbolic approximations to P(k)
author = Deaglan Bartlett
author_email = deaglan.bartlett@physics.ox.ac.uk
licence = MIT
url = https://github.com/DeaglanBartlett/symbolic_pofk


[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    colossus
    matplotlib
    scipy

[options.extras_require]
torch = torch
